Adding a patch contributed by Edward Ribeiro. Mostly improving the quality of java code, but probably fixes and issue or two. I took almost 100% of the patch, but omitted a StringUtil class he added. His email is included below. Thanks Edward!
Hi folks,

Today, I took some time ( ~ 1 hour ) to perform a couple of minor refactorings in VoltDB frontend package. The refactorings I made -- usually found in "Effective Java, 2nd edition" by Josh Bloch -- are nothing really innovative (I didn't have a time to really dig deep in the code YET), but I think these changes are at least worth a look. :) The .diff file is attached in this e-mail, but let me summarize the main points:

1. There are a few places where iterating over a Map performs an unnecessary method call in the loop and this is not the most efficient way. If you want to retrieve both key and value of a Map then you should iterate over a entrySet() instead of a keySet() (followed by a get() in the loop).

2. Hashtable and Vector are considered legacy (I guess not optimized) classes and are not used in 1.5 code bases. A Vector, for example, should be replaced by Collections.synchronizedMap(new HashMap<T>()) and Collections.synchronizedList(new ArrayList<T>()), respectively. OK, the new way is WAY more verbose, but hopefully it uses better locking algorithms. Furthermore, I noticed that many places of the code uses a Vector and it has all the methods synchronized (i.e. locks!) , so I would recommend to take some time to check if some of those Hashtable / Vector usage cannot be replaced by HashMap / ArrayList. The few locks the better! :) By the way, I would highly recommend to take a look at ConcurrentHashMap (pros and cons) because it has a more intelligent locking mechanism and better performance than Hashtable or synchronizedMap. A friend of mine said that if you insert an absurd number of objects in ConcurrentHashMap then it's performance is not better than Hashtable or synchronizedMap, but I have to check this